# Finitewave

./: .coveragerc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  full_check.yml  test-os.yml
Tutorials/: Anisotropy2D.ipynb  RestitutionCurve.ipynb  SpiralWaves2D.ipynb
examples/: README.md  tp06_fibrosis_3D_ventricle.py
examples/advanced/: observers.py
examples/basics/: change_conductivity.py  matrix_stimulation.py  observers.py  parameter_regions.py
examples/basics/2D/: anisotropic_medium_2d.py  chaotic_pattern.py  commands.py  isotropic_medium_2d.py  matrix_stimulation.py  reentry.py  using_states.py
examples/basics/3D/: slab_with_fibers_3d.py  spiral_wave_3d.py  ventricle_geometry_3d.py
examples/fibrosis/2D/: diffuse_fibrosis_2d.py  interstitial_fibrosis_2d.py  labyrinth_propagation.py  structural_anisotropy_2d.py  wave_propagation_delay_2d.py
examples/models/2D/: aliev_panfilov_2d.py  barkley_2d.py  bueno_orovio_2d.py  luo_rudy_2d.py  (+4 more)
examples/stimulation/: 3d_stimulation.py  coordinates_stimulation.py  current_stimulation.py  matrix_stimulation.py  sequential_stimulation.py  voltage_stimulation.py
finitewave/: README.md  __init__.py
finitewave/cpuwave/: __init__.py
finitewave/tools/: __init__.py  animation_2d_builder.py  animation_3d_builder.py  requires.py  velocity_2d_calculation.py  velocity_3d_calculation.py  vis_mesh_builder_3d.py
tests/: test_basics.py  test_fibrosis_2d.py  test_fibrosis_3d.py  test_models_2d.py  test_models_3d.py  test_trackers_2d.py  test_trackers_3d.py
(+82 files in other folders)
