[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "finitewave"
version = "0.9.0b2"
requires-python = ">=3.10"
authors = [
  { name="Timur Nezlobinsky", email="nezlobinsky@gmail.com" },
  { name="Arstanbek Okenov", email="arstanbek.okenov@ugent.be" }
]
description = "Simple package for a wide range of tasks in modeling cardiac electrophysiology using finite-difference methods."
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # core:
  "numpy>=1.26.4",
  "numba>=0.60.0",
  "scipy>=1.14.1",
  "tqdm>=4.66.5",

  # visualization:
  "matplotlib>=3.9.2",
  "natsort>=8.4.0",
  "pyvista>=0.44.1",
  "ffmpeg-python>=0.2.0",
  "pandas>=2.2.3",
  "scikit-image>=0.24.0",

  # models (default bundle for now)
  "finitewave-model-aliev-panfilov>=0.2.0",
  "finitewave-model-barkley>=0.2.0",
  "finitewave-model-bueno-orovio>=0.2.0",
  "finitewave-model-courtemanche>=0.2.0",
  "finitewave-model-fenton-karma>=0.2.0",
  "finitewave-model-luo-rudy-91>=0.2.0",
  "finitewave-model-mitchell-schaeffer>=0.2.0",
  "finitewave-model-ten-tusscher-panfilov-2006>=0.2.0",
]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "sphinx-gallery",
  "sphinx-copybutton",
  "numpydoc",
]

[tool.hatch.build.targets.wheel]
packages = ["finitewave"]

